fixed font size on small devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -57,6 +57,15 @@
   }
 }
 
+@media (max-width: 576px) {
+  .display-4 {
+    font-size: 2rem;
+  }
+  .display-3 {
+    font-size: 3rem;
+  }
+}
+
 .footer {
   padding: 10px !important;
   text-align: center;
